--- a/examples/google-multi-device/silabs/BUILD.gn
+++ b/examples/google-multi-device/silabs/BUILD.gn
@@ -18,7 +18,7 @@ import("//build_overrides/efr32_sdk.gni")
 import("//build_overrides/pigweed.gni")
 
 import("${build_root}/config/defaults.gni")
-import("${efr32_sdk_build_root}/silabs_executable.gni")
+import("${silabs_sdk_build_root}/silabs_executable.gni")
 
 import("${chip_root}/examples/common/pigweed/pigweed_rpcs.gni")
 import("${chip_root}/src/platform/device.gni")
@@ -38,7 +38,7 @@ if (wifi_soc) {
   import("${chip_root}/third_party/silabs/SiWx917_sdk.gni")
   examples_plat_dir = "${chip_root}/examples/platform/silabs/SiWx917"
 } else {
-  import("${efr32_sdk_build_root}/efr32_sdk.gni")
+  import("${silabs_sdk_build_root}/efr32_sdk.gni")
   examples_plat_dir = "${chip_root}/examples/platform/silabs/efr32"
 }
 
@@ -137,9 +137,9 @@ silabs_executable("google-multi-device") {
   sources = [
     "${examples_common_plat_dir}/main.cpp",
     "../device-common/include/GoogleMultiDeviceCommon.h",
+    "../device-common/include/GoogleMultiDeviceDishwasherOpstate.h",
     "../device-common/src/GoogleMultiDeviceCommon.cpp",
     "../device-common/src/GoogleMultiDeviceDishwasherOpstate.cpp",
-    "../device-common/include/GoogleMultiDeviceDishwasherOpstate.h",
     "include/MultiDeviceDriver.h",
     "src/AppTask.cpp",
     "src/MultiDeviceDriver.cpp",
@@ -149,6 +149,7 @@ silabs_executable("google-multi-device") {
   deps = [
     ":sdk",
     "${chip_root}/examples/google-multi-device/device-common:product-specialization",
+    "${chip_root}/src/platform/logging:default",
     app_data_model,
   ]
 
